awesome-application/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/monitoring-433016/awesome-cats-frontend:latest
        ports:
        - containerPort: 3000

  
  
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
