awesome-application/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-cats-ingress
  annotations:
    external-dns.alpha.kubernetes.io/zone: public
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    argocd.argoproj.io/sync-wave: "5"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - alymkulovabk.online
    secretName: letsencrypt-production
  rules:
  - host: alymkulovabk.online
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - path: /argocd/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-service
            port:
              number: 443
