awesome-application/k8s/newingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-argo-mychart-awesome-cats-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/zone: public
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: alymkulovabk.online
    http:
      paths:
      - backend:
          service:
            name: myapp-argo-mychart-frontend-service
            port:
              number: 3000
        path: /?(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: myapp-argo-mychart-backend-service
            port:
              number: 3000
        path: /api/?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - alymkulovabk.online
    secretName: letsencrypt-production
